🐛stop concept img spilling over page

--- a/src/components/concept-page/concept-page.styles.scss
+++ b/src/components/concept-page/concept-page.styles.scss
@@ -5,6 +5,7 @@
 
 .cp-page-container {
     text-align: start;
+    overflow: hidden;
 }
 
 .cp-title {
